# cpp-projekte

./: .gitignore  README.md
211neu/: CMakeLists.txt
216/: main.cpp
216neu/: CMakeLists.txt  main.cpp
217/: main.cpp
217neu/: CMakeLists.txt  main.cpp
301/: main.cpp
401/: main.cpp
403/: CMakeLists.txt  main.cpp
404/: CMakeLists.txt  main.cpp
501/: main.cpp
502/: main.cpp
507/: main.cpp
Badesee/: Badesee.pro  gui.cpp  gui.h  liege.cpp  liege.h  main.cpp  person.cpp  person.h  see.cpp  see.h
BadeseemitGUI/: BadeseemitGUI.pro  gui.h  liege.h  see.cpp  see.h
BinareSuche/: main.cpp
Dateizugriffe/: main.cpp  tomlwriter.cpp  tomlwriter.h
Einkaufsliste/: CMakeLists.txt  CMakeLists.txt.user.5fe2e0c  main.cpp
GUIBadesee/: GUIBadesee.pro  liege.cpp  liege.h  person.cpp  person.h  see.cpp  see.h  widget.cpp  widget.h  widget.ui
Kontaktfomular/: CMakeLists.txt  main.cpp
RechnerKonsole_ma/: RechnerKonsole_ma.pro  rechner.cpp  rechner.h  userinterface.h
SwimmingLake/: SwimmingLake.pro
Taschenrechner/: CMakeLists.txt  CMakeLists.txt.user.5fe2e0c  main.cpp
TaschenrechneralleRechengrundarten/: CMakeLists.txt  CMakeLists.txt.user.5fe2e0c  main.cpp
Variablentauschenunddebugger/: CMakeLists.txt  CMakeLists.txt.user.5fe2e0c  main.cpp
abgabemaul25011/: abgabemaul25011.pro  consoleview.cpp  consoleview.h  main.cpp  order.cpp  order.h  ordercontroller.cpp  ordercontroller.h  orderlist.cpp  orderlist.h
abgabeneu/: viewwidget1.h
bankgebueren/: main.cpp  (+1 more)
bausparvertrag/: CMakeLists.txt  main.cpp
rechnermitwiederholung/: CMakeLists.txt  main.cpp
(+123 files in other folders)
